Fixed small issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <app-header></app-header>
 <div>
-  <h1 i18n="header">Book Search</h1>
+  <h1 i18n="book search|header">Book Search</h1>
 
 
 
   <p>{{date | date }}</p>
   <p>{{ 1234567890.232 | number }}</p>
+  <p>{{0.991 | percent}}</p>
 
 
   <div class="row">
